--- a/index.html
+++ b/index.html
@@ -224,55 +224,66 @@
     </div>
   </div>
 
-  <script>
-    const hargaPaket = {
-      "1gb":{ram:1000,disk:1000,cpu:40},
-      "2gb":{ram:2000,disk:1000,cpu:60},
-      "3gb":{ram:3000,disk:2000,cpu:80},
-      "4gb":{ram:4000,disk:2000,cpu:100},
-      "5gb":{ram:5000,disk:3000,cpu:120},
-      "6gb":{ram:6000,disk:3000,cpu:140},
-      "7gb":{ram:7000,disk:4000,cpu:160},
-      "8gb":{ram:8000,disk:4000,cpu:180},
-      "9gb":{ram:9000,disk:5000,cpu:200},
-      "10gb":{ram:10000,disk:5000,cpu:220},
-      "unli":{ram:0,disk:0,cpu:0}
-    };
-    function resetForm(){
-      ['step1','loadingStep','step2','errorStep'].forEach(id=>document.getElementById(id).classList.add('hidden'));
-      document.getElementById('step1').classList.remove('hidden');
-    }
-    async function login(e){
-      e.preventDefault();
-      const u=document.getElementById('username').value.trim();
-      const p=document.getElementById('password').value.trim();
-      const paket=document.getElementById('paket').value;
-      if(!u||!p||!paket){alert('Isi semua data!');return;}
-      if(p!=='ResellerPanelByResming_9*7A'){alert('Password salah!');return;}
+<script>
+const hargaPaket = {
+  "1gb": { ram: 1000, disk: 1000, cpu: 40 },
+  "2gb": { ram: 2000, disk: 1000, cpu: 60 },
+  "3gb": { ram: 3000, disk: 2000, cpu: 80 },
+  "4gb": { ram: 4000, disk: 2000, cpu: 100 },
+  "5gb": { ram: 5000, disk: 3000, cpu: 120 },
+  "6gb": { ram: 6000, disk: 3000, cpu: 140 },
+  "7gb": { ram: 7000, disk: 4000, cpu: 160 },
+  "8gb": { ram: 8000, disk: 4000, cpu: 180 },
+  "9gb": { ram: 9000, disk: 5000, cpu: 200 },
+  "10gb": { ram: 10000, disk: 5000, cpu: 220 },
+  "unli": { ram: 0, disk: 0, cpu: 0 }
+};
 
-      document.getElementById('step1').classList.add('hidden');
-      document.getElementById('loadingStep').classList.remove('hidden');
+function goBack() {
+  document.getElementById('step1').classList.remove('hidden');
+  document.getElementById('loadingStep').classList.add('hidden');
+  document.getElementById('step2').classList.add('hidden');
+  document.getElementById('errorStep').classList.add('hidden');
+}
 
-      const conf=hargaPaket[paket];
-      
-      try{
-        const url=`https://api.nvidiabotz.xyz/pterodactyl/addpanel?domain=https://zeroctapremium.centzzcloud.my.id&plta=ptla_bQG7U6yQCEEuAG37zK7gQr3D9immAxEeeCwZ3PvCaXM&username=${username}&disk=${conf.disk}&cpu=${conf.cpu}`;
-        const res=await fetch(url);
-        const data=await res.json();
-        if(data?.user?.attributes){
-          document.getElementById('email').textContent=data.user.attributes.email||`${u}@example.com`;
-          document.getElementById('uname').textContent=data.user.attributes.username||u;
-          document.getElementById('pass').textContent=p;
-          document.getElementById('ram').textContent=paket.toUpperCase();
-          document.getElementById('loadingStep').classList.add('hidden');
-          document.getElementById('step2').classList.remove('hidden');
-        }else throw new Error('Respon API tidak sesuai.');
-      }catch(err){
-        document.getElementById('errorText').textContent=err.message||String(err);
-        document.getElementById('loadingStep').classList.add('hidden');
-        document.getElementById('errorStep').classList.remove('hidden');
-      }
+async function login(e) {
+  e.preventDefault();
+
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value.trim();
+  const paket = document.getElementById('paket').value;
+
+  if (!username || !password || !paket) return alert('Isi semua data!');
+  if (password !== 'ResellerPanelByResming_88') return alert('Password salah!');
+
+  document.getElementById('step1').classList.add('hidden');
+  document.getElementById('loadingStep').classList.remove('hidden');
+
+  const conf = hargaPaket[paket];
+
+  try {
+    const url = `https://api.nvidiabotz.xyz/pterodactyl/addpanel?domain=https://zeroctapremium.centzzcloud.my.id&plta=ptla_bQG7U6yQCEEuAG37zK7gQr3D9immAxEeeCwZ3PvCaXM&username=${encodeURIComponent(username)}&ram=${conf.ram}&disk=${conf.disk}&cpu=${conf.cpu}`;
+    
+    const res = await fetch(url);
+    const data = await res.json();
+
+    if (data?.user?.attributes) {
+      document.getElementById('loadingStep').classList.add('hidden');
+      document.getElementById('step2').classList.remove('hidden');
+
+      document.getElementById('email').innerText = data.user.attributes.email || `${username}@example.com`;
+      document.getElementById('uname').innerText = data.user.attributes.username || username;
+      document.getElementById('pass').innerText = password;
+      document.getElementById('ram').innerText = paket.toUpperCase();
+    } else {
+      throw new Error(data?.message || 'Respon API tidak sesuai');
     }
-  </script>
+  } catch (err) {
+    document.getElementById('loadingStep').classList.add('hidden');
+    document.getElementById('errorStep').classList.remove('hidden');
+    document.getElementById('errorText').innerText = err.message;
+  }
+}
+</script>
 </body>
 </html>
